fb friendly img/ display update

--- a/RMW.Web/Views/Shared/_Layout.cshtml
+++ b/RMW.Web/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
     <title>RW | @ViewBag.Title</title>
     <meta name="description" content="@ViewBag.MetaDesc">
     <meta name="viewport" content="width=device-width">
+    <meta property="og:image" content="~/content/img/fb_og.jpg" />
+
      <link rel="icon" href="~/content/img/favicon.ico" type='image/x-icon' />
    
     @System.Web.Optimization.Styles.Render("~/Content/css/css_head1")
@@ -95,27 +97,37 @@
                 <div class="side_bg">
          
                     <h2 class="home_title">Ryan Williams</h2>
-                    <p class="no_margin"><b>Software Engineer</b></p>
-                    <img src="~/content/img/me.jpg" alt="About Ryan Williams" title="About Ryan Williams" />
-             
-                    <ul>
-                        <li>ASP.NET/ C#</li>
-                        <li>Azure</li>
-                        <li>SQL Server</li>
-                        <li>HTML5, CSS, JavaScript</li>
+                    <p class="no_margin"><b>.NET Software Engineer</b></p>
+                    <img src="~/content/img/me.jpg" style="height: 150px;" alt="Ryan Williams" title="Ryan Williams" />
+                  
+                    <p>
+                        <b>Location:</b>
+                        San Francisco, California
+                        <img src="~/Content/img/US_small.png" />
+                    </p>
+                    <hr />
 
-      
-                    </ul>
+                    <p>
+                        <b>Specialization:</b>
+                        <ul>
+                            <li>ASP.NET/ C#</li>
+                            <li>Azure</li>
+                            <li>SQL Server</li>
+                            <li>HTML5, CSS, JavaScript</li>
+
+
+                        </ul>
+                    </p>
   
                     <hr />
-                    <p><b>Location</b></p>
-                    San Francisco, California  
-                    <img src="~/Content/img/US_small.png" />
-
-                    <hr />
                     
-                    <p><b>Open Source Work</b></p> 
-                    <a   target="_blank" href="https://github.com/ryn0">http://github.com/ryn0</a>   
+                    <p>
+                        <b>Open Source Code:</b>
+                        <ul>
+                            <li><a target="_blank" href="https://github.com/ryn0">My GitHub Profile</a>  </li>
+                            <li><a target="_blank" href="https://github.com/ryn0/home">This Website</a>  </li>
+                        </ul>
+                    </p> 
         
                 </div>
             </aside>
