--- a/src/DevLog.Web/Views/Articles/Index.cshtml
+++ b/src/DevLog.Web/Views/Articles/Index.cshtml
@@ -43,7 +43,7 @@
 
     for (int pageNumber = 1; pageNumber <= pageCount; pageNumber++)
     {
-        if (ViewBag.CurrentPage == pageNumber)
+        if (Model.PageNumber == pageNumber)
         {
             @pageNumber 
         }
