bundle and minify

--- a/src/DevLog.Web/Views/Shared/_Layout.cshtml
+++ b/src/DevLog.Web/Views/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
 
      <link rel="icon" href="~/favicon.ico" type='image/x-icon' />
 
-    <link href="~/css/main.css" rel="stylesheet" />
-    <link href="~/css/normalize.css" rel="stylesheet" />
-    @*@System.Web.Optimization.Styles.Render("~/Content/css/css_head1")
+    @*<link href="~/css/main.css" rel="stylesheet" />
+    <link href="~/css/normalize.css" rel="stylesheet" />*@
+    
+    <link href="~/css/site.min.css" rel="stylesheet" />
 
-    @System.Web.Optimization.Scripts.Render( "~/bundles/js_head1")*@
     <script src="~/js/vendor/modernizr-2.6.1-respond-1.1.0.js"></script>
-    <!-- last will -->
+   
 </head>
 <body>
     <!--[if lt IE 7]>
