--- a/src/DevLog.Web/Views/Shared/_Layout.cshtml
+++ b/src/DevLog.Web/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
          
                     <h2 class="home_title">Ryan Williams</h2>
                     <p class="no_margin"><b>.NET Software Engineer</b></p>
-                    <img src="~/images/me.jpg" style="height: 150px;" alt="Ryan Williams" title="Ryan Williams" />
+                    <img src="~/images/ryan.jpg" style="height: 150px;" alt="Ryan Williams" title="Ryan Williams" />
                   
                     <p>
                         <b>Location:</b>
