use pluralsight ad

--- a/src/DevLog.Web/Views/Shared/_Layout.cshtml
+++ b/src/DevLog.Web/Views/Shared/_Layout.cshtml
@@ -140,19 +140,7 @@
              
                 
                 <div style="text-align:center;">
-                    <script type="text/javascript">
-                        amzn_assoc_ad_type = "banner";
-                        amzn_assoc_marketplace = "amazon";
-                        amzn_assoc_region = "US";
-                        amzn_assoc_placement = "assoc_banner_placement_default";
-                        amzn_assoc_banner_type = "ez";
-                        amzn_assoc_p = "9";
-                        amzn_assoc_width = "180";
-                        amzn_assoc_height = "150";
-                        amzn_assoc_tracking_id = "dkm543-20";
-                        amzn_assoc_linkid = "844c47524044abfe9765d19c2ff341ad";
-                    </script>
-                    <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
+                    <a href="//pluralsight.pxf.io/c/1197953/431391/7490"><img src="//a.impactradius-go.com/display-ad/7490-431391" border="0" alt="" width="200" height="200" /></a><img height="0" width="0" src="//pluralsight.pxf.io/i/1197953/431391/7490" style="position:absolute;visibility:hidden;" border="0" />
                 </div>
                
             </aside>
