--- a/src/DevLog.Web/Views/Shared/_Layout.cshtml
+++ b/src/DevLog.Web/Views/Shared/_Layout.cshtml
@@ -13,16 +13,24 @@
     <meta name="description" content="@ViewBag.MetaDesc">
     <meta name="viewport" content="width=device-width">
     <meta property="og:image" content="~/images/fb_og.jpg" />
-
-     <link rel="icon" href="~/favicon.ico" type='image/x-icon' />
-
+    <link rel="icon" href="~/favicon.ico" type='image/x-icon' />
     @*<link href="~/css/main.css" rel="stylesheet" />
-    <link href="~/css/normalize.css" rel="stylesheet" />*@
-    
-    <link href="~/css/site.min.css" rel="stylesheet" />
+        <link href="~/css/normalize.css" rel="stylesheet" />*@
 
+    <link href="~/css/site.min.css" rel="stylesheet" />
     <script src="~/js/vendor/modernizr-2.6.1-respond-1.1.0.js"></script>
-   
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-98893910-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-98893910-3');
+    </script>
+
+
 </head>
 <body>
     <!--[if lt IE 7]>
@@ -157,21 +165,7 @@
                 </footer>
     </div>
      
-
-    <script>
-                        (function (i, s, o, g, r, a, m) {
-                        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                            (i[r].q = i[r].q || []).push(arguments)
-                        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-                        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-                        ga('create', 'UA-1180027-9', 'auto');
-                        ga('send', 'pageview');
-
-    </script>
-
-
+ 
        @RenderSection("scripts", required: false)
 
 </body>
